--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,15 @@
 [build-system]
-requires = [
-    "setuptools>=42",
-    "cmake>=3.15",
-    "pybind11>=2.10",
-    "scikit-build>=0.17.0"  # Hilft enorm bei der Verbindung von CMake & Python
-]
-build-backend = "setuptools.build_meta"
+requires = ["scikit-build-core>=0.5.0", "pybind11>=2.10"]
+build-backend = "scikit_build_core.build"
 
 [project]
 name = "planner_module"
 version = "1.1"
-description = "Path Planner Core für CaSSAndRA"
+description = "C++ Path Planner Core für CaSSAndRA"
 readme = "README.md"
 requires-python = ">=3.8"
 
-[tool.setuptools]
-# Hier sagen wir setuptools, dass es keine reinen Python-Files gibt
-packages = []
+[tool.scikit-build]
+cmake.version = ">=3.15"
+wheel.expand-macos-universal-tags = true
+install.strip = true
